--- a/docs/visual-basic/misc/bc33003.md
+++ b/docs/visual-basic/misc/bc33003.md
@@ -14,22 +14,22 @@ ms.contentlocale: ko-KR
 ms.lasthandoff: 05/04/2018
 ms.locfileid: "33630304"
 ---
-# <a name="39handles39-is-not-valid-on-operator-declaration"></a><span data-ttu-id="795e4-102">&#39;처리&#39; 연산자 선언에서 유효 하지 않습니다</span><span class="sxs-lookup"><span data-stu-id="795e4-102">&#39;Handles&#39; is not valid on operator declaration</span></span>
-<span data-ttu-id="795e4-103">[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) 은 [Handles](../../visual-basic/language-reference/statements/handles-clause.md) 키워드를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="795e4-103">An [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) specifies the [Handles](../../visual-basic/language-reference/statements/handles-clause.md) keyword.</span></span>  
+# <a name="39handles39-is-not-valid-on-operator-declaration"></a><span data-ttu-id="ef60b-102">&#39;처리&#39; 연산자 선언에서 유효 하지 않습니다</span><span class="sxs-lookup"><span data-stu-id="ef60b-102">&#39;Handles&#39; is not valid on operator declaration</span></span>
+<span data-ttu-id="ef60b-103">[Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) 은 [Handles](../../visual-basic/language-reference/statements/handles-clause.md) 키워드를 지정합니다.</span><span class="sxs-lookup"><span data-stu-id="ef60b-103">An [Operator Statement](../../visual-basic/language-reference/statements/operator-statement.md) specifies the [Handles](../../visual-basic/language-reference/statements/handles-clause.md) keyword.</span></span>  
   
- <span data-ttu-id="795e4-104">`Sub` 프로시저만 이벤트를 처리할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="795e4-104">Only a `Sub` procedure can handle events.</span></span> <span data-ttu-id="795e4-105">`Operator` 프로시저는 처리할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="795e4-105">An `Operator` procedure cannot.</span></span> <span data-ttu-id="795e4-106">이벤트 처리기에 대한 자세한 내용은 [How to: Call an Event Handler in Visual Basic](../../visual-basic/programming-guide/language-features/procedures/how-to-call-an-event-handler.md)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="795e4-106">For more information on event handlers, see [How to: Call an Event Handler in Visual Basic](../../visual-basic/programming-guide/language-features/procedures/how-to-call-an-event-handler.md).</span></span>  
+ <span data-ttu-id="ef60b-104">`Sub` 프로시저만 이벤트를 처리할 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="ef60b-104">Only a `Sub` procedure can handle events.</span></span> <span data-ttu-id="ef60b-105">`Operator` 프로시저는 처리할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ef60b-105">An `Operator` procedure cannot.</span></span> <span data-ttu-id="ef60b-106">이벤트 처리기에 대한 자세한 내용은 [방법: Visual Basic에서 이벤트 처리기 호출](../../visual-basic/programming-guide/language-features/procedures/how-to-call-an-event-handler.md)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="ef60b-106">For more information on event handlers, see [How to: Call an Event Handler in Visual Basic](../../visual-basic/programming-guide/language-features/procedures/how-to-call-an-event-handler.md).</span></span>  
   
- <span data-ttu-id="795e4-107">`Operator` 프로시저에는 `Public` 및 `Shared` 키워드가 모두 필요하며 변환 연산자에는 `Widening` 또는 `Narrowing` 키워드가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="795e4-107">An `Operator` procedure requires both the `Public` and `Shared` keywords, and a conversion operator requires either the `Widening` or the `Narrowing` keyword.</span></span> <span data-ttu-id="795e4-108">자세한 내용은 [Operator Procedures](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="795e4-108">For more information, see [Operator Procedures](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md).</span></span>  
+ <span data-ttu-id="ef60b-107">`Operator` 프로시저에는 `Public` 및 `Shared` 키워드가 모두 필요하며 변환 연산자에는 `Widening` 또는 `Narrowing` 키워드가 필요합니다.</span><span class="sxs-lookup"><span data-stu-id="ef60b-107">An `Operator` procedure requires both the `Public` and `Shared` keywords, and a conversion operator requires either the `Widening` or the `Narrowing` keyword.</span></span> <span data-ttu-id="ef60b-108">자세한 내용은 [Operator Procedures](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md)을 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="ef60b-108">For more information, see [Operator Procedures](../../visual-basic/programming-guide/language-features/procedures/operator-procedures.md).</span></span>  
   
- <span data-ttu-id="795e4-109">**오류 ID:** BC33003</span><span class="sxs-lookup"><span data-stu-id="795e4-109">**Error ID:** BC33003</span></span>  
+ <span data-ttu-id="ef60b-109">**오류 ID:** BC33003</span><span class="sxs-lookup"><span data-stu-id="ef60b-109">**Error ID:** BC33003</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="795e4-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="795e4-110">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ef60b-110">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ef60b-110">To correct this error</span></span>  
   
--   <span data-ttu-id="795e4-111">이 프로시저에서 이벤트를 처리하도록 하려면 `Sub` 프로시저로 다시 작성합니다.</span><span class="sxs-lookup"><span data-stu-id="795e4-111">If you intend this procedure to handle events, rewrite it as a `Sub` procedure.</span></span>  
+-   <span data-ttu-id="ef60b-111">이 프로시저에서 이벤트를 처리하도록 하려면 `Sub` 프로시저로 다시 작성합니다.</span><span class="sxs-lookup"><span data-stu-id="ef60b-111">If you intend this procedure to handle events, rewrite it as a `Sub` procedure.</span></span>  
   
--   <span data-ttu-id="795e4-112">이 프로시저가 연산자를 정의하려면 프로시저의 선언에서 `Handles` 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="795e4-112">If you intend this procedure to define an operator, remove the `Handles` keyword from its declaration.</span></span>  
+-   <span data-ttu-id="ef60b-112">이 프로시저가 연산자를 정의하려면 프로시저의 선언에서 `Handles` 키워드를 제거합니다.</span><span class="sxs-lookup"><span data-stu-id="ef60b-112">If you intend this procedure to define an operator, remove the `Handles` keyword from its declaration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="795e4-113">참고 항목</span><span class="sxs-lookup"><span data-stu-id="795e4-113">See Also</span></span>  
- [<span data-ttu-id="795e4-114">Operator 문</span><span class="sxs-lookup"><span data-stu-id="795e4-114">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
- [<span data-ttu-id="795e4-115">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="795e4-115">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
- [<span data-ttu-id="795e4-116">방법: 변환 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="795e4-116">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
+## <a name="see-also"></a><span data-ttu-id="ef60b-113">참고 항목</span><span class="sxs-lookup"><span data-stu-id="ef60b-113">See Also</span></span>  
+ [<span data-ttu-id="ef60b-114">Operator 문</span><span class="sxs-lookup"><span data-stu-id="ef60b-114">Operator Statement</span></span>](../../visual-basic/language-reference/statements/operator-statement.md)  
+ [<span data-ttu-id="ef60b-115">방법: 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="ef60b-115">How to: Define an Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-an-operator.md)  
+ [<span data-ttu-id="ef60b-116">방법: 변환 연산자 정의</span><span class="sxs-lookup"><span data-stu-id="ef60b-116">How to: Define a Conversion Operator</span></span>](../../visual-basic/programming-guide/language-features/procedures/how-to-define-a-conversion-operator.md)
