--- a/docs/visual-basic/misc/bc42311.md
+++ b/docs/visual-basic/misc/bc42311.md
@@ -14,32 +14,32 @@ ms.contentlocale: ko-KR
 ms.lasthandoff: 05/04/2018
 ms.locfileid: "33639109"
 ---
-# <a name="unable-to-create-xml-documentation-file-39ltnamegt39-ltmessagegt"></a><span data-ttu-id="240ae-102">XML 문서 파일을 만들 수 없습니다 &#39; &lt;이름&gt;&#39;: &lt;메시지&gt;</span><span class="sxs-lookup"><span data-stu-id="240ae-102">Unable to create XML documentation file &#39;&lt;name&gt;&#39;: &lt;message&gt;</span></span>
-<span data-ttu-id="240ae-103">오류로 인해 XML 문서 파일을 만들 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="240ae-103">The XML documentation file cannot be created due to an error.</span></span>  
+# <a name="unable-to-create-xml-documentation-file-39ltnamegt39-ltmessagegt"></a><span data-ttu-id="41f77-102">XML 문서 파일을 만들 수 없습니다 &#39; &lt;이름&gt;&#39;: &lt;메시지&gt;</span><span class="sxs-lookup"><span data-stu-id="41f77-102">Unable to create XML documentation file &#39;&lt;name&gt;&#39;: &lt;message&gt;</span></span>
+<span data-ttu-id="41f77-103">오류로 인해 XML 문서 파일을 만들 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="41f77-103">The XML documentation file cannot be created due to an error.</span></span>  
   
- <span data-ttu-id="240ae-104">**오류 ID:** BC42311</span><span class="sxs-lookup"><span data-stu-id="240ae-104">**Error ID:** BC42311</span></span>  
+ <span data-ttu-id="41f77-104">**오류 ID:** BC42311</span><span class="sxs-lookup"><span data-stu-id="41f77-104">**Error ID:** BC42311</span></span>  
   
- <span data-ttu-id="240ae-105">이 오류와 함께 다음과 같은 메시지가 나타날 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="240ae-105">The following messages may appear with this error:</span></span>  
+ <span data-ttu-id="41f77-105">이 오류와 함께 다음과 같은 메시지가 나타날 수 있습니다.</span><span class="sxs-lookup"><span data-stu-id="41f77-105">The following messages may appear with this error:</span></span>  
   
--   <span data-ttu-id="240ae-106">[XML comment block cannot be associated with any language element that supports the application of XML documentation comments](../../visual-basic/misc/bc42312.md).</span><span class="sxs-lookup"><span data-stu-id="240ae-106">[XML comment block cannot be associated with any language element that supports the application of XML documentation comments](../../visual-basic/misc/bc42312.md).</span></span>  
+-   <span data-ttu-id="41f77-106">[XML 주석 블록을 XML 문서 주석의 응용이 지원되는 언어 요소와 연결할 수 없습니다.](../../visual-basic/misc/bc42312.md).</span><span class="sxs-lookup"><span data-stu-id="41f77-106">[XML comment block cannot be associated with any language element that supports the application of XML documentation comments](../../visual-basic/misc/bc42312.md).</span></span>  
   
--   <span data-ttu-id="240ae-107">[XML comment tag 'returns' is not permitted on a 'WriteOnly' Property](../../visual-basic/misc/bc42313.md).</span><span class="sxs-lookup"><span data-stu-id="240ae-107">[XML comment tag 'returns' is not permitted on a 'WriteOnly' Property](../../visual-basic/misc/bc42313.md).</span></span>  
+-   <span data-ttu-id="41f77-107">[XML 주석 태그 'returns'는 'WriteOnly' 속성에 사용할 수 없습니다.](../../visual-basic/misc/bc42313.md).</span><span class="sxs-lookup"><span data-stu-id="41f77-107">[XML comment tag 'returns' is not permitted on a 'WriteOnly' Property](../../visual-basic/misc/bc42313.md).</span></span>  
   
--   <span data-ttu-id="240ae-108">[부분에 XML 주석을 두 번 이상 적용할 수 없습니다 \<유형 >](../../visual-basic/misc/bc42314.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="240ae-108">[XML comment cannot be applied more than once on a partial \<type>](../../visual-basic/misc/bc42314.md).</span></span>  
+-   <span data-ttu-id="41f77-108">[부분에 XML 주석을 두 번 이상 적용할 수 없습니다 \<유형 >](../../visual-basic/misc/bc42314.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="41f77-108">[XML comment cannot be applied more than once on a partial \<type>](../../visual-basic/misc/bc42314.md).</span></span>  
   
--   <span data-ttu-id="240ae-109">[XML comment tag 'returns' is not permitted on a 'declare sub' language element](../../visual-basic/misc/bc42315.md).</span><span class="sxs-lookup"><span data-stu-id="240ae-109">[XML comment tag 'returns' is not permitted on a 'declare sub' language element](../../visual-basic/misc/bc42315.md).</span></span>  
+-   <span data-ttu-id="41f77-109">[XML 주석 태그 'returns'는 'declare sub' 언어 요소에서 사용할 수 없습니다.](../../visual-basic/misc/bc42315.md).</span><span class="sxs-lookup"><span data-stu-id="41f77-109">[XML comment tag 'returns' is not permitted on a 'declare sub' language element](../../visual-basic/misc/bc42315.md).</span></span>  
   
--   <span data-ttu-id="240ae-110">[XML 문서 구문 분석 오류: 시작 태그 '\<태그 >'는 짝이 되는 끝 태그가](../../visual-basic/misc/bc42316.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="240ae-110">[XML documentation parse error: Start tag '\<tag>' doesn't have a matching end tag](../../visual-basic/misc/bc42316.md).</span></span>  
+-   <span data-ttu-id="41f77-110">[XML 문서 구문 분석 오류: 시작 태그 '\<태그 >'는 짝이 되는 끝 태그가](../../visual-basic/misc/bc42316.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="41f77-110">[XML documentation parse error: Start tag '\<tag>' doesn't have a matching end tag](../../visual-basic/misc/bc42316.md).</span></span>  
   
--   <span data-ttu-id="240ae-111">[XML 주석 형식 매개 변수에 \<매개 변수 >는 해당 형식 매개 변수와 일치 하지 않는 \<키워드 > 문을](../../visual-basic/misc/bc42317.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="240ae-111">[XML comment type parameter \<parameter> does not match a type parameter on the corresponding \<keyword> statement](../../visual-basic/misc/bc42317.md).</span></span>  
+-   <span data-ttu-id="41f77-111">[XML 주석 형식 매개 변수에 \<매개 변수 >는 해당 형식 매개 변수와 일치 하지 않는 \<키워드 > 문을](../../visual-basic/misc/bc42317.md)합니다.</span><span class="sxs-lookup"><span data-stu-id="41f77-111">[XML comment type parameter \<parameter> does not match a type parameter on the corresponding \<keyword> statement](../../visual-basic/misc/bc42317.md).</span></span>  
   
--   <span data-ttu-id="240ae-112">[XML comment type parameter must have a 'name' attribute](../../visual-basic/misc/bc42318.md).</span><span class="sxs-lookup"><span data-stu-id="240ae-112">[XML comment type parameter must have a 'name' attribute](../../visual-basic/misc/bc42318.md).</span></span>  
+-   <span data-ttu-id="41f77-112">[XML 주석 형식 매개 변수에는 'name' 특성이 있어야 합니다.](../../visual-basic/misc/bc42318.md).</span><span class="sxs-lookup"><span data-stu-id="41f77-112">[XML comment type parameter must have a 'name' attribute](../../visual-basic/misc/bc42318.md).</span></span>  
   
--   <span data-ttu-id="240ae-113">[XML comment exception must have a 'cref' attribute](../../visual-basic/language-reference/error-messages/xml-comment-exception-must-have-a-cref-attribute.md).</span><span class="sxs-lookup"><span data-stu-id="240ae-113">[XML comment exception must have a 'cref' attribute](../../visual-basic/language-reference/error-messages/xml-comment-exception-must-have-a-cref-attribute.md).</span></span>  
+-   <span data-ttu-id="41f77-113">[XML 주석 예외에는 'cref' 특성이 있어야 합니다.](../../visual-basic/language-reference/error-messages/xml-comment-exception-must-have-a-cref-attribute.md).</span><span class="sxs-lookup"><span data-stu-id="41f77-113">[XML comment exception must have a 'cref' attribute](../../visual-basic/language-reference/error-messages/xml-comment-exception-must-have-a-cref-attribute.md).</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="240ae-114">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="240ae-114">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="41f77-114">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="41f77-114">To correct this error</span></span>  
   
--   <span data-ttu-id="240ae-115">권장 사항에 대해 제공된 메시지를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="240ae-115">Consult the provided message for recommendations.</span></span>  
+-   <span data-ttu-id="41f77-115">권장 사항에 대해 제공된 메시지를 참조하세요.</span><span class="sxs-lookup"><span data-stu-id="41f77-115">Consult the provided message for recommendations.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="240ae-116">참고 항목</span><span class="sxs-lookup"><span data-stu-id="240ae-116">See Also</span></span>  
- [<span data-ttu-id="240ae-117">방법: XML 문서 만들기</span><span class="sxs-lookup"><span data-stu-id="240ae-117">How to: Create XML Documentation</span></span>](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
+## <a name="see-also"></a><span data-ttu-id="41f77-116">참고 항목</span><span class="sxs-lookup"><span data-stu-id="41f77-116">See Also</span></span>  
+ [<span data-ttu-id="41f77-117">방법: XML 문서 만들기</span><span class="sxs-lookup"><span data-stu-id="41f77-117">How to: Create XML Documentation</span></span>](../../visual-basic/programming-guide/program-structure/how-to-create-xml-documentation.md)
