--- a/docs/visual-basic/misc/bc30753.md
+++ b/docs/visual-basic/misc/bc30753.md
@@ -7,27 +7,28 @@ f1_keywords:
 helpviewer_keywords:
 - BC30753
 ms.assetid: 7e1bb22e-a507-483e-bfd6-f3a43e24a232
-ms.openlocfilehash: 784e29debc1a01ecddeb38123821c4dd05cd29fd
-ms.sourcegitcommit: e614e0f3b031293e4107f37f752be43652f3f253
+ms.openlocfilehash: 79f1d233e94cedef7c505d74bfb0b7db44e06697
+ms.sourcegitcommit: 2eb5ca4956231c1a0efd34b6a9cab6153a5438af
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 08/27/2018
-ms.locfileid: "42998939"
+ms.lasthandoff: 10/11/2018
+ms.locfileid: "49086208"
 ---
-# <a name="option-strict-on-disallows-implicit-conversions-from-39lttype1gt39-to-39lttype2gt39-the-visual-basic-60-collection-type-is-not-compatible-with-the-net-framework-collection-type"></a><span data-ttu-id="34ee8-102">Option Strict On에서는에서 암시적으로 변환할 수 없습니다. &#39; &lt;type1&gt; &#39; 를 &#39; &lt;type2&gt;&#39;; Visual Basic 6.0의 컬렉션 형식은.NET Framework와 호환 되지 않습니다. 컬렉션 형식</span><span class="sxs-lookup"><span data-stu-id="34ee8-102">Option Strict On disallows implicit conversions from &#39;&lt;type1&gt;&#39; to &#39;&lt;type2&gt;&#39;; the Visual Basic 6.0 collection type is not compatible with the .NET Framework collection type</span></span>
-<span data-ttu-id="34ee8-103">`Option Strict On` 에서는 '`<type1>`'에서 '`<type2>`'으로 암시적으로 변환할 수 없습니다. Visual Basic 6.0의 컬렉션 형식은 [!INCLUDE[dnprdnshort](~/includes/dnprdnshort-md.md)] 의 컬렉션 형식과 호환되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="34ee8-103">`Option Strict On` disallows implicit conversions from '`<type1>`' to '`<type2>`'; the Visual Basic 6.0 collection type is not compatible with the [!INCLUDE[dnprdnshort](~/includes/dnprdnshort-md.md)] collection type.</span></span>  
-  
- <span data-ttu-id="34ee8-104">Visual Basic 6.0에서 사용되는 컬렉션 개체는 [!INCLUDE[vs_current_long](~/includes/vs-current-long-md.md)]에서 사용되는 컬렉션 개체와 다릅니다.</span><span class="sxs-lookup"><span data-stu-id="34ee8-104">The collection object that is used in Visual Basic 6.0 differs from the collection object that is used in [!INCLUDE[vs_current_long](~/includes/vs-current-long-md.md)].</span></span>  
-  
- <span data-ttu-id="34ee8-105">**오류 ID:** BC30753</span><span class="sxs-lookup"><span data-stu-id="34ee8-105">**Error ID:** BC30753</span></span>  
-  
-## <a name="to-correct-this-error"></a><span data-ttu-id="34ee8-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="34ee8-106">To correct this error</span></span>  
-  
--   <span data-ttu-id="34ee8-107">형식 변환 키워드 중 하나를 사용하여 컬렉션 개체를 명시적으로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="34ee8-107">Explicitly convert collection objects by using one of the type conversion keywords.</span></span> <span data-ttu-id="34ee8-108">합니다 [CType Function](../../visual-basic/language-reference/functions/ctype-function.md) 하 고 [DirectCast 연산자](../../visual-basic/language-reference/operators/directcast-operator.md) 키워드 변환에 실패 하면 런타임 예외를 throw 합니다.</span><span class="sxs-lookup"><span data-stu-id="34ee8-108">The [CType Function](../../visual-basic/language-reference/functions/ctype-function.md) and [DirectCast Operator](../../visual-basic/language-reference/operators/directcast-operator.md) keywords throw a run-time exception if the conversion fails.</span></span> <span data-ttu-id="34ee8-109">합니다 [TryCast 연산자](../../visual-basic/language-reference/operators/trycast-operator.md) 키워드를 반환 [Nothing](../../visual-basic/language-reference/nothing.md) 변환에 실패 하는 경우.</span><span class="sxs-lookup"><span data-stu-id="34ee8-109">The [TryCast Operator](../../visual-basic/language-reference/operators/trycast-operator.md) keyword returns [Nothing](../../visual-basic/language-reference/nothing.md) if the conversion fails.</span></span>  
-  
-## <a name="see-also"></a><span data-ttu-id="34ee8-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="34ee8-110">See Also</span></span>  
- [<span data-ttu-id="34ee8-111">CType 함수</span><span class="sxs-lookup"><span data-stu-id="34ee8-111">CType Function</span></span>](../../visual-basic/language-reference/functions/ctype-function.md)  
- [<span data-ttu-id="34ee8-112">DirectCast 연산자</span><span class="sxs-lookup"><span data-stu-id="34ee8-112">DirectCast Operator</span></span>](../../visual-basic/language-reference/operators/directcast-operator.md)  
- [<span data-ttu-id="34ee8-113">TryCast 연산자</span><span class="sxs-lookup"><span data-stu-id="34ee8-113">TryCast Operator</span></span>](../../visual-basic/language-reference/operators/trycast-operator.md)  
- [<span data-ttu-id="34ee8-114">Nothing</span><span class="sxs-lookup"><span data-stu-id="34ee8-114">Nothing</span></span>](../../visual-basic/language-reference/nothing.md)  
- [<span data-ttu-id="34ee8-115">컬렉션(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="34ee8-115">Collections (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/concepts/collections.md)
+# <a name="option-strict-on-disallows-implicit-conversions-from-39lttype1gt39-to-39lttype2gt39-the-visual-basic-60-collection-type-is-not-compatible-with-the-net-framework-collection-type"></a><span data-ttu-id="d8856-102">Option Strict On에서는에서 암시적으로 변환할 수 없습니다. &#39; &lt;type1&gt; &#39; 를 &#39; &lt;type2&gt;&#39;; Visual Basic 6.0의 컬렉션 형식은.NET Framework와 호환 되지 않습니다. 컬렉션 형식</span><span class="sxs-lookup"><span data-stu-id="d8856-102">Option Strict On disallows implicit conversions from &#39;&lt;type1&gt;&#39; to &#39;&lt;type2&gt;&#39;; the Visual Basic 6.0 collection type is not compatible with the .NET Framework collection type</span></span>
+<span data-ttu-id="d8856-103">`Option Strict On` 에서는 '`<type1>`'에서 '`<type2>`'으로 암시적으로 변환할 수 없습니다. Visual Basic 6.0의 컬렉션 형식은 [!INCLUDE[dnprdnshort](~/includes/dnprdnshort-md.md)] 의 컬렉션 형식과 호환되지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="d8856-103">`Option Strict On` disallows implicit conversions from '`<type1>`' to '`<type2>`'; the Visual Basic 6.0 collection type is not compatible with the [!INCLUDE[dnprdnshort](~/includes/dnprdnshort-md.md)] collection type.</span></span>
+
+ <span data-ttu-id="d8856-104">Visual Basic 6.0에서 사용 되는 컬렉션 개체는 Visual Studio 2012에서 사용 되는 컬렉션 개체에서 서로 다릅니다.</span><span class="sxs-lookup"><span data-stu-id="d8856-104">The collection object that is used in Visual Basic 6.0 differs from the collection object that is used in Visual Studio 2012.</span></span>
+
+ <span data-ttu-id="d8856-105">**오류 ID:** BC30753</span><span class="sxs-lookup"><span data-stu-id="d8856-105">**Error ID:** BC30753</span></span>
+
+## <a name="to-correct-this-error"></a><span data-ttu-id="d8856-106">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="d8856-106">To correct this error</span></span>
+
+-   <span data-ttu-id="d8856-107">형식 변환 키워드 중 하나를 사용하여 컬렉션 개체를 명시적으로 변환합니다.</span><span class="sxs-lookup"><span data-stu-id="d8856-107">Explicitly convert collection objects by using one of the type conversion keywords.</span></span> <span data-ttu-id="d8856-108">합니다 [CType Function](../../visual-basic/language-reference/functions/ctype-function.md) 하 고 [DirectCast 연산자](../../visual-basic/language-reference/operators/directcast-operator.md) 키워드 변환에 실패 하면 런타임 예외를 throw 합니다.</span><span class="sxs-lookup"><span data-stu-id="d8856-108">The [CType Function](../../visual-basic/language-reference/functions/ctype-function.md) and [DirectCast Operator](../../visual-basic/language-reference/operators/directcast-operator.md) keywords throw a run-time exception if the conversion fails.</span></span> <span data-ttu-id="d8856-109">합니다 [TryCast 연산자](../../visual-basic/language-reference/operators/trycast-operator.md) 키워드를 반환 [Nothing](../../visual-basic/language-reference/nothing.md) 변환에 실패 하는 경우.</span><span class="sxs-lookup"><span data-stu-id="d8856-109">The [TryCast Operator](../../visual-basic/language-reference/operators/trycast-operator.md) keyword returns [Nothing](../../visual-basic/language-reference/nothing.md) if the conversion fails.</span></span>
+
+## <a name="see-also"></a><span data-ttu-id="d8856-110">참고 항목</span><span class="sxs-lookup"><span data-stu-id="d8856-110">See Also</span></span>
+
+- [<span data-ttu-id="d8856-111">CType 함수</span><span class="sxs-lookup"><span data-stu-id="d8856-111">CType Function</span></span>](../../visual-basic/language-reference/functions/ctype-function.md)
+- [<span data-ttu-id="d8856-112">DirectCast 연산자</span><span class="sxs-lookup"><span data-stu-id="d8856-112">DirectCast Operator</span></span>](../../visual-basic/language-reference/operators/directcast-operator.md)
+- [<span data-ttu-id="d8856-113">TryCast 연산자</span><span class="sxs-lookup"><span data-stu-id="d8856-113">TryCast Operator</span></span>](../../visual-basic/language-reference/operators/trycast-operator.md)
+- [<span data-ttu-id="d8856-114">Nothing</span><span class="sxs-lookup"><span data-stu-id="d8856-114">Nothing</span></span>](../../visual-basic/language-reference/nothing.md)
+- [<span data-ttu-id="d8856-115">컬렉션(Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="d8856-115">Collections (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/concepts/collections.md)
