--- a/docs/visual-basic/misc/bc31027.md
+++ b/docs/visual-basic/misc/bc31027.md
@@ -8,20 +8,20 @@ helpviewer_keywords:
 - BC31027
 ms.assetid: cafe0aa3-dc7d-4516-8f95-a4667ea8e0f1
 ms.openlocfilehash: d61dde8e4c7c2e74af2b95823065bbfc43660d47
-ms.sourcegitcommit: 8c28ab17c26bf08abbd004cc37651985c68841b8
+ms.sourcegitcommit: 2eb5ca4956231c1a0efd34b6a9cab6153a5438af
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 10/07/2018
-ms.locfileid: "48848090"
+ms.lasthandoff: 10/11/2018
+ms.locfileid: "49087177"
 ---
-# <a name="unable-to-open-file-39ltfilenamegt39-lterrorgt"></a><span data-ttu-id="46764-102">파일을 열 수 없습니다 &#39; &lt;filename&gt;&#39;: &lt;오류&gt;</span><span class="sxs-lookup"><span data-stu-id="46764-102">Unable to open file &#39;&lt;filename&gt;&#39;: &lt;error&gt;</span></span>
-<span data-ttu-id="46764-103">이 프로젝트에서 파일을 여는 동안 오류가 발생했습니다.</span><span class="sxs-lookup"><span data-stu-id="46764-103">There was an error opening a file in this project.</span></span>  
+# <a name="unable-to-open-file-39ltfilenamegt39-lterrorgt"></a><span data-ttu-id="24c2b-102">파일을 열 수 없습니다 &#39; &lt;filename&gt;&#39;: &lt;오류&gt;</span><span class="sxs-lookup"><span data-stu-id="24c2b-102">Unable to open file &#39;&lt;filename&gt;&#39;: &lt;error&gt;</span></span>
+<span data-ttu-id="24c2b-103">이 프로젝트에서 파일을 여는 동안 오류가 발생했습니다.</span><span class="sxs-lookup"><span data-stu-id="24c2b-103">There was an error opening a file in this project.</span></span>  
   
- <span data-ttu-id="46764-104">**오류 ID:** BC31027</span><span class="sxs-lookup"><span data-stu-id="46764-104">**Error ID:** BC31027</span></span>  
+ <span data-ttu-id="24c2b-104">**오류 ID:** BC31027</span><span class="sxs-lookup"><span data-stu-id="24c2b-104">**Error ID:** BC31027</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="46764-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="46764-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="24c2b-105">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="24c2b-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="46764-106">파일이 있고, 손상되었거나 다른 응용 프로그램에 의해 잠기지 않았는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="46764-106">Verify that the file exists, and is not damaged or locked by another application.</span></span>  
+1.  <span data-ttu-id="24c2b-106">파일이 있고, 손상되었거나 다른 응용 프로그램에 의해 잠기지 않았는지 확인합니다.</span><span class="sxs-lookup"><span data-stu-id="24c2b-106">Verify that the file exists, and is not damaged or locked by another application.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="46764-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="46764-107">See Also</span></span>  
- [<span data-ttu-id="46764-108">파일 형식 및 Visual Basic 및 Visual C#에서 파일 확장명</span><span class="sxs-lookup"><span data-stu-id="46764-108">File Types and File Extensions in Visual Basic and Visual C#</span></span>](https://msdn.microsoft.com/library/f793852c-da06-4d52-a826-65f635844772)
+## <a name="see-also"></a><span data-ttu-id="24c2b-107">참고 항목</span><span class="sxs-lookup"><span data-stu-id="24c2b-107">See Also</span></span>  
+ [<span data-ttu-id="24c2b-108">Visual Basic 및 Visual C#에서의 파일 형식 및 파일 확장명</span><span class="sxs-lookup"><span data-stu-id="24c2b-108">File Types and File Extensions in Visual Basic and Visual C#</span></span>](https://msdn.microsoft.com/library/f793852c-da06-4d52-a826-65f635844772)
