--- a/docs/visual-basic/misc/bc31190.md
+++ b/docs/visual-basic/misc/bc31190.md
@@ -8,24 +8,24 @@ helpviewer_keywords:
 - BC31190
 ms.assetid: cb861748-0ee4-40d3-a859-98ca6c39b4f4
 ms.openlocfilehash: ede8c9c820397706b1e813543c82bf30a0e65f31
-ms.sourcegitcommit: 8c28ab17c26bf08abbd004cc37651985c68841b8
+ms.sourcegitcommit: 15d99019aea4a5c3c91ddc9ba23692284a7f61f3
 ms.translationtype: MT
 ms.contentlocale: ko-KR
-ms.lasthandoff: 10/06/2018
-ms.locfileid: "48844204"
+ms.lasthandoff: 10/13/2018
+ms.locfileid: "49308255"
 ---
-# <a name="xml-literals-and-xml-axis-properties-are-not-available"></a><span data-ttu-id="ac22c-102">XML 리터럴 및 XML 축 속성을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ac22c-102">XML literals and XML axis properties are not available</span></span>
-<span data-ttu-id="ac22c-103">XML 리터럴 및 XML 축 속성을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="ac22c-103">XML literals and XML axis properties are not available.</span></span> <span data-ttu-id="ac22c-104">System.Xml, System.Xml.Linq 및 System.Core에 참조를 추가하세요.</span><span class="sxs-lookup"><span data-stu-id="ac22c-104">Add references to System.Xml, System.Xml.Linq, and System.Core.</span></span>  
+# <a name="xml-literals-and-xml-axis-properties-are-not-available"></a><span data-ttu-id="07c8a-102">XML 리터럴 및 XML 축 속성을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="07c8a-102">XML literals and XML axis properties are not available</span></span>
+<span data-ttu-id="07c8a-103">XML 리터럴 및 XML 축 속성을 사용할 수 없습니다.</span><span class="sxs-lookup"><span data-stu-id="07c8a-103">XML literals and XML axis properties are not available.</span></span> <span data-ttu-id="07c8a-104">System.Xml, System.Xml.Linq 및 System.Core에 참조를 추가하세요.</span><span class="sxs-lookup"><span data-stu-id="07c8a-104">Add references to System.Xml, System.Xml.Linq, and System.Core.</span></span>  
   
- <span data-ttu-id="ac22c-105">컴파일되는 코드에 XML 리터럴 또는 XML 축 속성이 포함되어 있지만 XML 리터럴 또는 XML 축 속성을 컴파일하는 데 필요한 어셈블리를 참조하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="ac22c-105">The code being compiled includes XML literals or XML axis properties, but it does not reference the assemblies that are needed to compile XML literals or XML axis properties.</span></span>  
+ <span data-ttu-id="07c8a-105">컴파일되는 코드에 XML 리터럴 또는 XML 축 속성이 포함되어 있지만 XML 리터럴 또는 XML 축 속성을 컴파일하는 데 필요한 어셈블리를 참조하지 않습니다.</span><span class="sxs-lookup"><span data-stu-id="07c8a-105">The code being compiled includes XML literals or XML axis properties, but it does not reference the assemblies that are needed to compile XML literals or XML axis properties.</span></span>  
   
- <span data-ttu-id="ac22c-106">**오류 ID:** BC31190</span><span class="sxs-lookup"><span data-stu-id="ac22c-106">**Error ID:** BC31190</span></span>  
+ <span data-ttu-id="07c8a-106">**오류 ID:** BC31190</span><span class="sxs-lookup"><span data-stu-id="07c8a-106">**Error ID:** BC31190</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="ac22c-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="ac22c-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="07c8a-107">이 오류를 해결하려면</span><span class="sxs-lookup"><span data-stu-id="07c8a-107">To correct this error</span></span>  
   
--   <span data-ttu-id="ac22c-108">System.Xml.dll, system.xml.linq.dll 및 System.Core.dll 어셈블리에 대한 참조를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="ac22c-108">Add references to the System.Xml.dll, System.Xml.Linq.dll, and System.Core.dll assemblies.</span></span>  
+-   <span data-ttu-id="07c8a-108">System.Xml.dll, system.xml.linq.dll 및 System.Core.dll 어셈블리에 대한 참조를 추가합니다.</span><span class="sxs-lookup"><span data-stu-id="07c8a-108">Add references to the System.Xml.dll, System.Xml.Linq.dll, and System.Core.dll assemblies.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="ac22c-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="ac22c-109">See Also</span></span>  
- [<span data-ttu-id="ac22c-110">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="ac22c-110">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
- [<span data-ttu-id="ac22c-111">XML 축 속성</span><span class="sxs-lookup"><span data-stu-id="ac22c-111">XML Axis Properties</span></span>](../../visual-basic/language-reference/xml-axis/index.md)  
- [<span data-ttu-id="ac22c-112">XML</span><span class="sxs-lookup"><span data-stu-id="ac22c-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
+## <a name="see-also"></a><span data-ttu-id="07c8a-109">참고 항목</span><span class="sxs-lookup"><span data-stu-id="07c8a-109">See Also</span></span>  
+ [<span data-ttu-id="07c8a-110">XML 리터럴</span><span class="sxs-lookup"><span data-stu-id="07c8a-110">XML Literals</span></span>](../../visual-basic/language-reference/xml-literals/index.md)  
+ [<span data-ttu-id="07c8a-111">XML 축 속성</span><span class="sxs-lookup"><span data-stu-id="07c8a-111">XML Axis Properties</span></span>](../../visual-basic/language-reference/xml-axis/index.md)  
+ [<span data-ttu-id="07c8a-112">XML</span><span class="sxs-lookup"><span data-stu-id="07c8a-112">XML</span></span>](../../visual-basic/programming-guide/language-features/xml/index.md)
